[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Assets/particlePack_1.1/PNG (Transparent)/smoke_02.png" type="Texture" id=2]
[ext_resource path="res://Assets/particlePack_1.1/PNG (Transparent)/smoke_07.png" type="Texture" id=3]
[ext_resource path="res://Assets/particlePack_1.1/PNG (Transparent)/light_03.png" type="Texture" id=4]
[ext_resource path="res://Assets/particlePack_1.1/PNG (Transparent)/light_02.png" type="Texture" id=5]
[ext_resource path="res://Assets/particlePack_1.1/PNG (Transparent)/muzzle_03.png" type="Texture" id=6]

[sub_resource type="Curve" id=35]
max_value = 4.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0300353, 1.36196 ), 0.0, 0.0, 0, 0, Vector2( 0.0830389, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=36]
curve = SubResource( 35 )

[sub_resource type="ParticlesMaterial" id=33]
flag_disable_z = true
spread = 8.18
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 36 )
color = Color( 1, 0.427451, 0.239216, 1 )

[sub_resource type="Curve" id=38]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.429329, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 27.0552 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=39]
curve = SubResource( 38 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0, 0.504, 1 )
colors = PoolColorArray( 0.34902, 0.34902, 0.34902, 0.2, 0.34902, 0.34902, 0.34902, 1, 0.584314, 0.584314, 0.584314, 0 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 19 )

[sub_resource type="Curve" id=28]
max_value = 3.0
_data = [ Vector2( 0, 0.0391104 ), 0.0, 0.0, 0, 0, Vector2( 0.0123675, 1.70936 ), 135.051, 0.0, 1, 0, Vector2( 1, 2.2592 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=29]
curve = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=23]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 268.84
initial_velocity_random = 1.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 39 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 18.19
radial_accel = 1.0
scale_curve = SubResource( 29 )
color_ramp = SubResource( 20 )

[sub_resource type="Curve" id=31]
max_value = 4.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0194346, 2.53374 ), 0.0, 0.0, 0, 0, Vector2( 0.0618375, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=30]
emission_shape = 1
emission_sphere_radius = 32.0
flag_disable_z = true
spread = 8.18
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 32 )
color = Color( 1, 0.552941, 0.298039, 1 )

[sub_resource type="ParticlesMaterial" id=37]
flag_disable_z = true
spread = 8.18
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.2
scale_curve = SubResource( 32 )
color = Color( 1, 0.984314, 0.976471, 1 )

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 0.694118, 0.694118, 0.694118, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 0.0483129 ), 0.0, 0.0, 0, 0, Vector2( 0.00530036, 0.410276 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.667945 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=10]
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 200, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 1, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 2.0
linear_accel_random = 0.25
radial_accel = 1.0
radial_accel_random = 0.25
scale = 0.1
scale_curve = SubResource( 26 )
color_ramp = SubResource( 12 )

[sub_resource type="CircleShape2D" id=40]
radius = 89.2693

[sub_resource type="CapsuleShape2D" id=41]
radius = 27.4997
height = 183.0

[node name="Explosion" type="Node2D"]
script = ExtResource( 1 )

[node name="Explosion3" type="Particles2D" parent="."]
position = Vector2( 0, -15 )
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
process_material = SubResource( 33 )
texture = ExtResource( 5 )

[node name="PrincipalExplosion" type="Particles2D" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 50
lifetime = 5.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 23 )
texture = ExtResource( 2 )

[node name="Explosion" type="Particles2D" parent="."]
position = Vector2( -1, -18 )
emitting = false
amount = 10
one_shot = true
explosiveness = 0.93
process_material = SubResource( 30 )
texture = ExtResource( 4 )

[node name="Explosion2" type="Particles2D" parent="."]
position = Vector2( 0, -79 )
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
process_material = SubResource( 37 )
texture = ExtResource( 6 )

[node name="FragmentDust" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 10 )
texture = ExtResource( 3 )

[node name="CollisionKillTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FxKillTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BlastWave" type="Area2D" parent="."]
position = Vector2( 0, -33 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 18
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastWave"]
shape = SubResource( 40 )

[node name="Shrapnel" type="Area2D" parent="."]
position = Vector2( 0, -21 )
collision_layer = 34
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shrapnel"]
rotation = 1.5708
shape = SubResource( 41 )

[connection signal="timeout" from="CollisionKillTimer" to="." method="_on_CollisionKillTimer_timeout"]
[connection signal="timeout" from="FxKillTimer" to="." method="_on_FxKillTimer_timeout"]
